# PokerTrainer

./: .gitignore  BRAINLIFT.docx  README.md  debug_imports.py  test_4bet_25bb.py  test_4bet_fix.py  test_action_fix.py  test_action_labeling.py  test_action_labeling_fix.py  test_ai_turn_logging.py  test_facing_4bet_options.py  test_facing_bet_fix.py  test_final_4bet_behavior.py  test_import.py  test_legal_actions_fix.py  test_llm_provider_switching.py  test_logger.py  verify_app.py
.cursor/rules/: action-labeling-consolidation.mdc
rlcard_modified/: __init__.py  game.py  pyproject.toml  setup.py
tests/: __init__.py  debug_imports.py  performance_baseline.py  run_phase5_tests.py  test_4bet_25bb.py  test_4bet_fix.py  test_action_fix.py  test_action_labeling.py  test_ai_turn_logging.py  test_coach_context.py  test_facing_4bet_options.py  test_facing_bet_fix.py  test_final_4bet_behavior.py  test_game_logic.py  test_import.py  test_legal_actions_fix.py  test_llm_provider_switching.py  test_logger.py  verify_app.py  verify_production_ready.py
tests/coach/: test_chatbot_coach.py  test_equity_calculator_phase2.py  test_gto_rules_phase2.py  test_llm_opponent_agent_basic.py  test_llm_opponent_agent_context.py  test_llm_opponent_agent_errors.py  test_llm_opponent_agent_llm.py  test_llm_opponent_agent_mapping.py  test_llm_opponent_validation.py  (+2 more)
tests/e2e/: __init__.py  (+1 more)
webapp/: .coverage  README.md  app.py  requirements.txt  rlcard_game_source_part1.py  rlcard_mock.py  rlcard_original.py  run.sh  setup_deployment.py  simple_verify.py  test_phase4_validation.py  test_rlcard.py
(+53 files in other folders)
